Add sinatra-activerecord basic infrastructure.
Note that AR is configured to load a sqlite database 
in ./var (and not in ./db).

--- a/api/Gemfile
+++ b/api/Gemfile
@@ -11,3 +11,10 @@ gem "rack_csrf"
 
 gem "sinatra"
 gem "sinatra-contrib"
+
+# -- models -------------------------------------------------------------------
+
+gem "sinatra-activerecord"
+gem "sqlite3"
+gem "rake"
+
