--- a/api/Gemfile
+++ b/api/Gemfile
@@ -19,6 +19,7 @@ gem "sinatra-contrib"
 gem "sinatra-activerecord"
 gem "sqlite3"
 gem "rake"
+gem 'dotenv'
 
 group :development do
   gem "wirble"
