--- a/api/ca/ssl.conf
+++ b/api/ca/ssl.conf
@@ -39,7 +39,7 @@ default_ca	= CA_default		# The default ca section
 ####################################################################
 [ CA_default ]
 
-dir			= /Users/eno/projects/kinko/var/ssl 
+dir			= $ENV::OPENSSL_DIR
 certs		= $dir/certs		# Where the issued certs are kept
 crl_dir		= $dir/crl		# Where the issued crl are kept
 database	= $dir/index.txt	# database index file.
