Restructured SSHD code
This patch moves most of the sshd related rake tasks into the SSHD
module. It also renames and reorganized the configuration parameters
for both SSHD and other options for a more uniform naming scheme.

--- a/api/Rakefile
+++ b/api/Rakefile
@@ -1,3 +1,10 @@
 require "sinatra/activerecord/rake"
 require_relative "config/environment"
 
+namespace :sshd do
+  desc "Start sshd server non-daemonized"
+  task :exec do
+    require "sshd"
+    SSHD.exec
+  end
+end
