--- a/config/nginx/server.conf
+++ b/config/nginx/server.conf
@@ -1,8 +1,21 @@
-# location / {
-#   root           /Users/eno/projects/kinko/packages/ruby/public;
-#   try_files $uri @box;
-# }
-    
-# location @box {
-#   proxy_pass http://localhost:8082;
-# }
+location /monit/ {
+  rewrite  ^/monit/(.*)  /$1 break;
+  proxy_pass http://localhost:5500;
+
+  # proxy_set_header X-Real-IP $remote_addr;
+  # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  # proxy_set_header Host something.appspot.com;
+  # proxy_set_header X-NginX-Proxy true;
+  # proxy_pass https://ssl_api/;
+  # proxy_ssl_session_reuse off;
+  # proxy_redirect off;
+}
+
+location / {
+  root           $root/public;
+  try_files $uri @backend;
+}
+
+location @backend {
+  proxy_pass http://backend;
+}
