--- a/config/nginx/server.conf
+++ b/config/nginx/server.conf
@@ -2,8 +2,9 @@ location /monit/ {
   rewrite  ^/monit/(.*)  /$1 break;
   proxy_pass http://localhost:5500;
 
-  # proxy_set_header X-Real-IP $remote_addr;
-  # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header X-Real-IP $remote_addr;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header Host $host;
   # proxy_set_header Host something.appspot.com;
   # proxy_set_header X-NginX-Proxy true;
   # proxy_pass https://ssl_api/;
@@ -18,4 +19,8 @@ location / {
 
 location @backend {
   proxy_pass http://backend;
+
+  proxy_set_header X-Real-IP $remote_addr;
+  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  proxy_set_header Host $host;
 }
