--- a/config/nginx/monit.conf
+++ b/config/nginx/monit.conf
@@ -1,6 +1,6 @@
 location /monit/ {
   rewrite  ^/monit/(.*)  /$1 break;
-  proxy_pass http://localhost:5500;
+  proxy_pass http://localhost:$monit_port;
 
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -10,17 +10,4 @@ location /monit/ {
   # proxy_pass https://ssl_api/;
   # proxy_ssl_session_reuse off;
   # proxy_redirect off;
-}
-
-location / {
-  root           $root/public;
-  try_files $uri @backend;
-}
-
-location @backend {
-  proxy_pass http://backend;
-
-  proxy_set_header X-Real-IP $remote_addr;
-  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  proxy_set_header Host $host;
 }
