--- a/config/server.conf.example
+++ b/config/server.conf.example
@@ -17,3 +17,9 @@ HTTPS_PORT = 8443
 
 # Set port for SSHD connection from pipe2me clients.
 SSHD_PORT = 8444
+
+# The monit daemon needs a port to communicate with
+MONIT_PORT = 8445
+
+# Route HTTP(S) requests below /monit/ to monit daemon?
+MONIT_PUBLIC_ACCESS = false
