--- a/config/nginx/monit.conf
+++ b/config/nginx/monit.conf
@@ -1,6 +1,6 @@
 location /monit/ {
   rewrite  ^/monit/(.*)  /$1 break;
-  proxy_pass http://localhost:$monit_port;
+  proxy_pass http://127.0.0.1:$monit_port;
 
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
