Initial fnordmetric installation.
Adds a working fnordmetric installation. The web interface is loaded
at localhost:8445.

Also downgrades thin to 1.5.*, to work around https://github.com/paulasmuth/fnordmetric/issues/166

--- a/config/server.conf.example
+++ b/config/server.conf.example
@@ -43,3 +43,5 @@ MONIT_PUBLIC_ACCESS = false
 # STATHAT_EMAIL = "my-stathat-account@somewhere.test"
 STATHAT_PREFIX = "live"
 
+# The fnordmetric web port
+FNORDMETRIC_PORT = 8445
