Fixes nginx ssl configuration.
nginx now sets the SSL forwarded header correctly

--- a/config/nginx/monit.conf
+++ b/config/nginx/monit.conf
@@ -10,4 +10,6 @@ location /monit/ {
   # proxy_pass https://ssl_api/;
   # proxy_ssl_session_reuse off;
   # proxy_redirect off;
+
+  proxy_set_header X-Forwarded-SSL $ssl;
 }
