--- a/config/nginx/pipe2me.conf
+++ b/config/nginx/pipe2me.conf
@@ -9,4 +9,6 @@ location @backend {
   proxy_set_header X-Real-IP $remote_addr;
   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header Host $host;
+
+  proxy_set_header X-Forwarded-SSL $ssl;
 }
