Adds SSL related headers to nginx configuration

--- a/config/nginx/pipe2me.conf
+++ b/config/nginx/pipe2me.conf
@@ -11,4 +11,7 @@ location @backend {
   proxy_set_header Host $host;
 
   proxy_set_header X-Forwarded-SSL $ssl;
+
+  # set SSL environment values.
+  include nginx/ssl.conf;
 }
