Properly set X-Forward-For
It now contains the listening port.

--- a/config/nginx/pipe2me.conf
+++ b/config/nginx/pipe2me.conf
@@ -5,13 +5,25 @@ location / {
 
 location @backend {
   proxy_pass http://backend;
-
-  proxy_set_header X-Real-IP $remote_addr;
-  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header Host $host;
 
+  # == X-Real-IP ==============================================================
+  #
+  # X-Real-IP can be used to collect metrics depending on the source IP.
+  #
+  proxy_set_header X-Real-IP $remote_addr;
+
+  # == X-Forwarded-Host =======================================================
+  #
+  # Rack needs X-Forwarded-Host to determine the complete original request URL.
+  # proxy_set_header X-Forwarded-Host $proxy_add_x_forwarded_for:$forwarded_port;
+  proxy_set_header X-Forwarded-Host $host:$forwarded_port;
+
+  # == X-Forwarded-SSL is either "on" or "off." ===============================
+  #
   proxy_set_header X-Forwarded-SSL $ssl;
 
-  # set SSL environment values.
+  #
+  # == insert SSL environment values. =========================================
   include nginx/ssl.conf;
 }
